# simcpp20

./: CMakeLists.txt
examples/: CMakeLists.txt  all_of.cpp  any_of.cpp  bank_renege.cpp  carwash.cpp  clocks.cpp  clocks_units.cpp  filtered_store.cpp  machine_shop.cpp  ping_pong.cpp  store.cpp  value_event.cpp  value_process.cpp
include/fschuetz04/: resource.hpp
include/fschuetz04/simcpp20/: CMakeLists.txt  event.hpp  simulation.hpp
include/simcpp20/: resource.hpp
include/simcpp20/simcpp20/: CMakeLists.txt  event.hpp  simulation.hpp  value_event.hpp
tests/: CMakeLists.txt  tests.cpp
